fixing spacing on CourseCard numbers

--- a/src/components/CourseCard/CourseCard.scss
+++ b/src/components/CourseCard/CourseCard.scss
@@ -2,7 +2,8 @@
 @import '../../assets/scss/mixins';
 
 .CourseCard {
-  @include margin(2, 1.3, 2, 1.3);
+  margin: $spacing--xLarge 0;
+  padding: 0 $spacing--xLarge;
   position: relative;
   counter-increment: listItemCount;
   margin-bottom: $spacing--small;
@@ -14,7 +15,7 @@
     font-size: 6em;
     z-index: -1;
     line-height: 50px;
-    top: -15px;
+    top: 0;
     left: -35px;
   }
 }
